err/nawa.err
Listing '.'...
Listing './bin'...
Compiling './bin/nawa_admin.py'...
***   File "./bin/nawa_admin.py", line 57
    print commands[command].__doc__
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Nawa-1.0.0b180113042357.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nawa'...
Compiling './lib/python3.5/site-packages/nawa/core.py'...
***   File "./lib/python3.5/site-packages/nawa/core.py", line 81
    print '%s: %s' % (h, header[h])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nawa/utils.py'...
***   File "./lib/python3.5/site-packages/nawa/utils.py", line 26
    print '[read_config] ... ',
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './nawa'...
Compiling './nawa/__init__.py'...
Listing './nawa/bin'...
Compiling './nawa/bin/nawa_admin.py'...
***   File "./nawa/bin/nawa_admin.py", line 57
    print commands[command].__doc__
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './nawa/bin/project_templates'...
Compiling './nawa/cc.py'...
Compiling './nawa/core.py'...
***   File "./nawa/core.py", line 81
    print '%s: %s' % (h, header[h])
                 ^
SyntaxError: invalid syntax

Listing './nawa/profile_templates'...
Listing './nawa/profile_templates/cgi'...
Listing './nawa/profile_templates/cgi/cache'...
Compiling './nawa/profile_templates/cgi/nawaapi.py'...
***   File "./nawa/profile_templates/cgi/nawaapi.py", line 1
    <%
    ^
SyntaxError: invalid syntax

Compiling './nawa/profile_templates/cgi/nawaapi_ep.py'...
***   File "./nawa/profile_templates/cgi/nawaapi_ep.py", line 1
    <%
    ^
SyntaxError: invalid syntax

Listing './nawa/tools'...
Compiling './nawa/tools/nawa_cache_clean_ep.py'...
***   File "./nawa/tools/nawa_cache_clean_ep.py", line 57
    print 'Status: 200 OK'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nawa/tools/nawa_cgi_serv.py'...
***   File "./nawa/tools/nawa_cgi_serv.py", line 40
    print '-' * 10
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nawa/utils.py'...
***   File "./nawa/utils.py", line 26
    print '[read_config] ... ',
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
